--- a/Responsive Web Design Projects/Build a Tribute Page/index.html
+++ b/Responsive Web Design Projects/Build a Tribute Page/index.html
@@ -1,1 +1,38 @@
-html doc
+<html lang="en">
+    <head>
+        <title>Tribute Page</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    </head>
+    <body>
+        <main id="main">
+            <h1 id="title">HP Lovecraft</h1>
+            <p>A man who sees an octopus and goes crazy</p>
+            <figure>
+                <img src="https://arielhudnall.files.wordpress.com/2013/10/raven-edgar-allan-poe.jpg" alt="HP Lovecraft cray-cray meme">
+                <figcaption>Lovecraft and a raven</figcaption>
+            </figure>
+
+            <section id="tribute-info">
+                <h2 id="headline">Lovecraft's quotes</h2>
+                <ul id="list">
+                    <li><strong> “The world is indeed comic, but the joke is on mankind.” </strong></li>
+                    <li> “Pleasure to me is wonder—the unexplored, the unexpected, the thing that is hidden and the changeless thing that lurks behind superficial mutability.” </li>
+                    <li> “The oldest and strongest emotion of mankind is fear, and the oldest and strongest kind of fear is fear of the unknown” </li>
+                    <li> “Almost nobody dances sober, unless they happen to be insane.” </li>
+                    <li> “From even the greatest of horrors irony is seldom absent.” </li>
+                    <li>“That is not dead which can eternal lie,
+                        And with strange aeons even death may die.” </li>
+                    <li> “The most merciful thing in the world, I think, is the inability of the human mind to correlate all its contents. We live on a placid island of ignorance in the midst of black seas of the infinity, and it was not meant that we should voyage far.” </li>
+                    <li> “I couldn't live a week without a private library - indeed, I'd part with all my furniture and squat and sleep on the floor before I'd let go of the 1500 or so books I possess.” </li>
+                    <li> “The most merciful thing in the world, I think, is the inability of the human mind to correlate all its contents... some day the piecing together of dissociated knowledge will open up such terrifying vistas of reality, and of our frightful position therein, that we shall either go mad from the revelation or flee from the light into the peace and safety of a new Dark Age.” </li>
+                </ul>
+                <h3>Read Lovecraft's spooky 
+                    <a id="tribute-link"
+                    href="https://en.wikipedia.org/wiki/H._P._Lovecraft"
+                    target="_blank">Wikipedia page</a>.
+                </h3>
+            </section>
+        </main>
+    </body>
+</html>
